[package]
name = "find_empty_space"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
winapi = { version = "0.3.9", features = ["winnt", "processthreadsapi", "psapi", "memoryapi", "handleapi", "tlhelp32", "errhandlingapi"] }
log = "0.4.17"
